Closed Bug 14756 Opened 26 years ago Closed 26 years ago

[PP]Importing an .ldif file in Address Book doesn't work

Categories

(SeaMonkey :: MailNews: Address Book & Contacts, defect, P3)

PowerPC
Mac System 8.5

Tracking

(Not tracked)

VERIFIED FIXED

People

(Reporter: esther, Assigned: chuang)

References

Details

Using 19990923 build on mac importing an .ldif file in the Address book doesn't work. It works in win32 and linux and should be implemented in Mac. 1. Make sure you have an .ldif file to import (export an address book in 4.x to create an .ldif file) 2. Launch Messenger 3. Select Address Book from the Tasks menu list 4. Select Import from the Menu list while in the adddress book 5. Select an .ldif file to import and click Open Result: nothing happens, the Open dialog for selecting a location for the .ldif file closes, your back to the Address book window but the file is not imported. Expected: It should show up as a new address book with the name of the .ldif file.
Esther - I thought I filed a bug on this last week. Can you check?
Blocks: 8252
Status: NEW → RESOLVED
Closed: 26 years ago
Resolution: --- → FIXED
Fix checked in.
Using 19991001 on Mac this is still not importing. This build is the M10 build, I will check on the M11 build later.
Lisa, the only bug I found was asking for the "." to be removed and that is fixed and verified.
Status: RESOLVED → VERIFIED
Using 19991026 build on mac this is fixed. Verified.
Product: Browser → Seamonkey
You need to log in before you can comment on or make changes to this bug.