Fix bug 14756 [PP]Importing an .ldif file in Address Book doesn't work, r=jefft